took borders off from modal. fixing cards to align

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -59,9 +59,7 @@ p {
   display: block;
   opacity: 1 !important;
 }
-.modal-footer {
-  background: transparent;
-}
+
 #logo {
   color: white;
 }
