--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -157,7 +157,7 @@ $btn-border-width: $border-width;
 
 $border-color: $primary;
 
-$border-radius: map-get($spacers, 1);
+$border-radius: map-get($spacers, 2);
 $border-radius-lg: $border-radius;
 $border-radius-sm: $border-radius;
 
